/*
 * $Id: ChangeLog,v 1.2061 2004/01/15 00:17:55 fsgiudice Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-15 02:29 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    ! Better handling of the dialogs between the two processes.
    ! Faster drawing of box characters (removed trice repainting)
    ! Faster drawing of dot fillers (using the idea of Premizlav).
      (need fixing in case of font change).
    ! Using Premyslaw's color definitions (they looks more like dos).

2004-01-15 01:11 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtwvt/gtwvt.c
    + Added WVT_GETRGBCOLOR that returns the correspondant RBG value of
      a color ( i.e. use WVT_GetRGBColor( hb_ColorToN( "W" ) ) )
  * tests/gtclose.prg
    * Fixed typo

2004-01-15 13:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
     - redo hb_stack with HB_VM_STACK overwritten
     - remove
        WVT_SETCLOSEEVENT(nEventNumber)
        WVT_SETSHUTDOWNEVENT(nEventNumber)
        Use new xHarbour wide functions
  * /include/hbgtwvt.h
     - remove redundant shutdownEvent & closeEvent defines and variables

2004-01-14 23:53 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapigt.h
  * source/rtl/gtapi.c
    + Added functions
      void HB_EXPORT hb_gtHandleClose(void);
      BOOL HB_EXPORT hb_gtHandleShutdown(void);
      BOOL HB_EXPORT hb_gtSetCloseHandler(PHB_ITEM handler);
      PHB_ITEM HB_EXPORT hb_gtGetCloseHandler(void);

      int  HB_EXPORT   hb_gtGetCloseEvent( void );
      int  HB_EXPORT   hb_gtGetShutdownEvent( void );
      void HB_EXPORT   hb_gtSetCloseEvent( int iEvent );
      void HB_EXPORT   hb_gtSetShutdownEvent( int iEvent );

  * source/rtl/gx.c
    + Added functions
      SETGTCLOSEHANDLER()