@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2061 2004/01/15 00:17:55 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.2062 2004/01/15 01:30:57 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2004-01-15 14:07 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * source/rtl/gtxvt/gtxvt.c
+    ! Faster and cleaner interprocess synchronization
+    ! Main application receives a hb_vmRequestQuit if the window's child
+      is killed externally.
+      
 2004-01-15 02:29 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/rtl/gtxvt/gtxvt.c
     ! Better handling of the dialogs between the two processes.
